@@ -27,11 +27,13 @@ import de.caritas.cob.messageservice.api.service.LiveEventNotificationService;
 import de.caritas.cob.messageservice.api.service.LogService;
 import de.caritas.cob.messageservice.api.service.MessageMapper;
 import de.caritas.cob.messageservice.api.service.RocketChatService;
+import de.caritas.cob.messageservice.api.service.SessionService;
 import de.caritas.cob.messageservice.api.service.dto.Message;
 import de.caritas.cob.messageservice.api.service.statistics.StatisticsService;
 import de.caritas.cob.messageservice.api.service.statistics.event.CreateMessageStatisticsEvent;
 import de.caritas.cob.messageservice.api.tenant.TenantContext;
 import de.caritas.cob.messageservice.statisticsservice.generated.web.model.UserRole;
+import de.caritas.cob.messageservice.userservice.generated.web.model.SessionUserDTO;
 import java.util.Optional;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
@@ -56,6 +58,8 @@ public class Messenger {
   private final @NonNull StatisticsService statisticsService;
   private final @NonNull AuthenticatedUser authenticatedUser;
   private final @NonNull MessageMapper mapper;
+
+  private final @NonNull SessionService sessionService;
 
   @Value("${rocket.systemuser.id}")
   private String rocketChatSystemUserId;
@@ -106,7 +110,27 @@ public class Messenger {
     }
 
     statisticsService.fireEvent(new CreateMessageStatisticsEvent(authenticatedUser.getUserId(),
-        resolveUserRole(authenticatedUser), chatMessage.getRcGroupId(), false));
+        resolveUserRole(authenticatedUser), chatMessage.getRcGroupId(), false,
+        resolveAdviceseekerUserId(chatMessage), TenantContext.getCurrentTenant()));
+  }
+
+  private String resolveAdviceseekerUserId(ChatMessage chatMessage) {
+    if (authenticatedUser.isConsultant()) {
+      de.caritas.cob.messageservice.userservice.generated.web.model.GroupSessionListResponseDTO sessionBelongingToRcGroupId = sessionService.findSessionBelongingToRcGroupId(
+          chatMessage.getRcToken(), chatMessage.getRcGroupId());
+      if (sessionBelongingToRcGroupId != null
+          && sessionBelongingToRcGroupId.getSessions() != null) {
+        var optionalSession = sessionBelongingToRcGroupId.getSessions().stream().findFirst();
+        return optionalSession.isPresent() ? getUserId(optionalSession.get()) : null;
+      }
+    }
+    return null;
+  }
+
+  private String getUserId(
+      de.caritas.cob.messageservice.userservice.generated.web.model.GroupSessionResponseDTO session) {
+    SessionUserDTO user = session.getUser();
+    return user != null ? user.getId() : null;
   }
 
   private UserRole resolveUserRole(AuthenticatedUser authenticatedUser) {
@@ -149,8 +173,8 @@ public class Messenger {
       rocketChatService.markGroupAsReadForSystemUser(groupMessage.getRcGroupId());
       return mapper.messageResponseOf(response);
     } catch (RocketChatSendMessageException
-        | RocketChatPostMarkGroupAsReadException
-        | CustomCryptoException ex) {
+             | RocketChatPostMarkGroupAsReadException
+             | CustomCryptoException ex) {
       throw new InternalServerErrorException(ex, LogService::logInternalServerError);
     }
   }
@@ -235,7 +259,7 @@ public class Messenger {
     }
 
     if (!message.isA(MessageType.REASSIGN_CONSULTANT)) {
-      var errorMessage = String.format("Message (%s) is not a reassignment.", messageId);
+      var errorMessage = "Message (%s) is not a reassignment.".formatted(messageId);
       throw new BadRequestException(errorMessage, LogService::logBadRequest);
     }
 
@@ -257,15 +281,18 @@ public class Messenger {
   }
 
   /**
-   * Posts a message which contains an alias with the provided {@link MessageType} in
-   * the specified Rocket.Chat group.
+   * Posts a message which contains an alias with the provided {@link MessageType} in the specified
+   * Rocket.Chat group.
    *
    * @param rcGroupId   Rocket.Chat group ID
    * @param messageType {@link MessageType}
    * @return {@link MessageResponseDTO}
    */
-  public MessageResponseDTO postAliasMessage(String rcGroupId, MessageType messageType, String content) {
-    AliasMessageDTO aliasMessageDTO = new AliasMessageDTO().messageType(messageType).content(content);
+  public MessageResponseDTO postAliasMessage(String rcGroupId, MessageType messageType,
+      String content) {
+    AliasMessageDTO aliasMessageDTO = new AliasMessageDTO().messageType(messageType)
+        .content(content);
+
     var response = this.rocketChatService.postAliasOnlyMessageAsSystemUser(rcGroupId,
         aliasMessageDTO);
     return mapper.messageResponseOf(response);
