@@ -44,6 +44,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -128,15 +129,25 @@ public class RocketChatService {
     return messageStream;
   }
 
-  private MessageStreamDTO obtainMessageStream(String rcToken, String rcUserId, URI uri) {
+  MessageStreamDTO obtainMessageStream(String rcToken, String rcUserId, URI uri) {
     HttpEntity<?> entity = new HttpEntity<>(getRocketChatHeader(rcToken, rcUserId));
 
     try {
       return restTemplate.exchange(uri, HttpMethod.GET, entity, MessageStreamDTO.class).getBody();
-
-    } catch (RestClientException exception) {
-      LogService.logRocketChatServiceError(exception);
-      var msg = String.format("Could not read message stream from Rocket.Chat API (uri: %s)", uri);
+    } catch (HttpClientErrorException | HttpServerErrorException ex) {
+      var msg = "HTTP error while retrieving message stream from Rocket.Chat API (uri: %s): %s"
+          .formatted(uri, ex.getMessage());
+      LogService.logRocketChatServiceError(ex);
+      throw new InternalServerErrorException(msg, LogService::logRocketChatServiceError);
+    } catch (RestClientException ex) {
+      var msg = "RestClientException while accessing Rocket.Chat API (uri: %s): %s"
+          .formatted(uri, ex.getMessage());
+      LogService.logRocketChatServiceError(ex);
+      throw new InternalServerErrorException(msg, LogService::logRocketChatServiceError);
+    } catch (Exception ex) {
+      var msg = "Unexpected error while retrieving message stream from Rocket.Chat API (uri: %s): %s"
+          .formatted(uri, ex.getMessage());
+      LogService.logRocketChatServiceError(ex);
       throw new InternalServerErrorException(msg, LogService::logRocketChatServiceError);
     }
   }
@@ -155,7 +166,7 @@ public class RocketChatService {
 
     } catch (IllegalArgumentException exception) {
       throw new InternalServerErrorException(
-          String.format("Could not build message stream URI for rcGroupId %s", rcGroupId),
+          "Could not build message stream URI for rcGroupId %s".formatted(rcGroupId),
           LogService::logRocketChatServiceError);
     }
   }
@@ -318,7 +329,7 @@ public class RocketChatService {
 
     } else {
       LogService.logRocketChatServiceError(
-          String.format("Could not set messages as read for system user in group %s", rcGroupId));
+          "Could not set messages as read for system user in group %s".formatted(rcGroupId));
     }
   }
 
@@ -363,8 +374,7 @@ public class RocketChatService {
 
     } catch (HttpClientErrorException clientErrorEx) {
       throw new RocketChatBadRequestException(
-          String.format(
-              "Rocket.Chat API call failed with status %s for parameters rcUserId: %s, rcGroupId: %s)",
+          "Rocket.Chat API call failed with status %s for parameters rcUserId: %s, rcGroupId: %s)".formatted(
               clientErrorEx.getStatusCode(), rcUserId, rcGroupId),
           LogService::logRocketChatBadRequestError);
     }
@@ -382,7 +392,7 @@ public class RocketChatService {
     } catch (HttpClientErrorException exception) {
       if (!isRcNotFoundResponse(exception)) {
         var errorFormat = "Could not read message (%s) from Rocket.Chat API";
-        var errorMessage = String.format(errorFormat, messageId);
+        var errorMessage = errorFormat.formatted(messageId);
         throw new InternalServerErrorException(errorMessage, LogService::logRocketChatServiceError);
       }
     }
